# mcp-ssh-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  PROJECT_SUMMARY.txt  README.md  build-multiarch.sh  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CHATGPT_INTEGRATION.md  CONFIGURATION.md  DOCKER.md  INSTALLATION.md  QUICKSTART.md  SECURITY.md
examples/: config.http.yaml  config.minimal.yaml  config.oauth.yaml  config.stdio.yaml
src/ssh_mcp_bridge/: __init__.py  __main__.py  app.py
src/ssh_mcp_bridge/api/: __init__.py  http_server.py  mcp_server.py
src/ssh_mcp_bridge/core/: __init__.py  session_manager.py  ssh_session.py
src/ssh_mcp_bridge/models/: __init__.py  config.py
src/ssh_mcp_bridge/services/: __init__.py  mcp_service.py
src/ssh_mcp_bridge/utils/: __init__.py  jwt_verifier.py  logging.py
tests/: __init__.py  test_config.py
